# Text-Conditoned-I-JEPA

./: .env.example  .gitignore  README.md  build_csp_hf_datasets.py  build_csp_reference_hf_datasets.py  clip_pipeline.py  csp_eval.py  csp_vocab_train.py  datasets_csp_style.py  hyperparameters.json  main.py  project_env.py  push_text_cond_checkpoint_to_hub.py  pyproject.toml  rerun_checkpoint_evals.py  run_csp_vocab_train.py  run_evals.py  run_text_cond_train.py  slurm-1892053.err  slurm-2195428.out  slurm-2195434.err  slurm-2195434.out  slurm-2195462.err  slurm-2195462.out  slurm-2195470.err  slurm-2195470.out  slurm-2195474.err  slurm-2195474.out  slurm-2195484.err  slurm-2195484.out  slurm-2195607.err  slurm-2195607.out  slurm-2195660.err  slurm-2195660.out  slurm-2195679.err  slurm-2195679.out  slurm_csp_vocab_train.sh  slurm_rerun_checkpoint_evals.sh  slurm_run_evals.sh  slurm_text_cond_train.sh  (+12 more)
csp_attention_compare/cspref_cgqa_samples/: manifest.json
csp_attention_compare/cspref_cgqa_samples_bk/: manifest.json
datasets/: __init__.py  composition_dataset.py  feasibility.py  read_datasets.py
results/cspref_cgqa_clipstyle/: dinov3_s42_20260501-201800_test.json  dinov3_s42_20260501-201800_val.json  dinov3_s42_20260502-162807_test.json  dinov3_s42_20260502-162807_val.json  ijepa_s42_20260501-210856_test.json  ijepa_s42_20260501-210856_val.json  ijepa_s42_20260502-173241_test.json  ijepa_s42_20260502-173241_val.json  vjepa_s42_20260501-233121_test.json  vjepa_s42_20260501-233121_val.json  vjepa_s42_20260502-202444_test.json  vjepa_s42_20260502-202444_val.json
(+213 files in other folders)
